# ml-default-payment-project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  REFACTORING_SUMMARY.md  make.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml  data_pipeline.yml  model_training.yml  predict.yml
conf/: job_config.json
data/bronze/: credit_card_default.parquet.dvc
data/gold/: credit_card_default_features.parquet.dvc
data/silver/: credit_card_default.parquet.dvc
data/validation_reports/: validation_results_20251122_221324.json
data_processing/: check_s3.py
data_processing/bronze/: ingest_bronze.py
data_processing/gold/: build_features.py
data_processing/silver/: clean_data.py  validate_data.py
docs/: ARCHITECTURE_SUMMARY.md  PIPELINE_ARCHITECTURE.md  PIPELINE_FLOW.md  QUICK_START.md  TRAINING_PIPELINE_REFACTORING.md
docs/credit-card-default/: mkdocs.yml
ml_classification/: __init__.py  config.py  dataset.py  features.py  plots.py
ml_classification/features/: engineering.py  preprocessing.py
ml_classification/modeling/: data.py  data_loader.py  eval.py  mlflow_logger.py  models.py  pipeline_builder.py  predict.py  train.py  train_baseline.py  trainer.py
ml_classification/pipelines/: __init__.py  feature_pipeline.py  inference_pipeline.py  training_pipeline.py  training_pipeline_v2.py
ml_classification/serving/: app.py  batch_inference.py
mlflow-dockerfile/: Dockerfile
models/: model.pkl
notebooks/: EDA.ipynb  eda_day2.ipynb  feat_eng.ipynb  training.ipynb
reports/: s3_metadata.json
tests/features/: __init__.py  (+2 more)
(+19 files in other folders)
