[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml_classification"
version = "0.0.1"
description = "This is for testing ml classification algorithms"
authors = [
  { name = "Flavio Venturini" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "typer",
    "pandas",
    "mlflow[extras]>=3.1.1",
    "seaborn>=0.13.2",
    "yellowbrick>=1.5",
    "mkdocs>=1.6.1",
    "great-expectations>=1.5.8",
    "pytest-cov>=6.2.1",
    "s3fs>=2025.7.0",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["ml_classification"]
include = ["pyproject.toml", "ml_classification/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml_classification"]
force-sort-within-sections = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[project.scripts]
project-cli = "make:app"